k8s/infra/kube-prometheus-stack/rendered/kube-prometheus-stack/prometheus-operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prom-operator
    app.kubernetes.io/component: prometheus-operator
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prom-prometheus-operator
    app.kubernetes.io/part-of: prom
    app.kubernetes.io/version: 88.3.0
    chart: kube-prometheus-stack-88.3.0
    heritage: Helm
    release: kube-prometheus-stack
  name: kube-prom-operator
  namespace: kube-prometheus-stack-system
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: prom-operator
      release: kube-prometheus-stack
  template:
    metadata:
      labels:
        app: prom-operator
        app.kubernetes.io/component: prometheus-operator
        app.kubernetes.io/instance: kube-prometheus-stack
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: prom-prometheus-operator
        app.kubernetes.io/part-of: prom
        app.kubernetes.io/version: 88.3.0
        chart: kube-prometheus-stack-88.3.0
        heritage: Helm
        release: kube-prometheus-stack
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --kubelet-service=kube-system/kube-prom-kubelet
        - --kubelet-endpoints=true
        - --kubelet-endpointslice=false
        - --localhost=127.0.0.1
        - --prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.93.0
        - --config-reloader-cpu-request=0
        - --config-reloader-cpu-limit=0
        - --config-reloader-memory-request=0
        - --config-reloader-memory-limit=0
        - --thanos-default-base-image=quay.io/thanos/thanos:v0.42.4
        - --secret-field-selector=type!=kubernetes.io/dockercfg,type!=kubernetes.io/service-account-token,type!=helm.sh/release.v1
        - --web.enable-tls=true
        - --web.cert-file=/cert/cert
        - --web.key-file=/cert/key
        - --web.listen-address=:10250
        - --web.tls-min-version=VersionTLS13
        image: quay.io/prometheus-operator/prometheus-operator:v0.93.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
          initialDelaySeconds: 0
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: prom
        ports:
        - containerPort: 10250
          name: https
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
          initialDelaySeconds: 0
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /cert
          name: tls-secret
          readOnly: true
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: kube-prom-operator
      terminationGracePeriodSeconds: 30
      volumes:
      - name: tls-secret
        secret:
          defaultMode: 420
          secretName: kube-prom-admission
