k8s/infra/kube-prometheus-stack/rendered/kube-prometheus-stack/prometheus-operator/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app: prom-operator
    app.kubernetes.io/component: prometheus-operator
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prom-prometheus-operator
    app.kubernetes.io/part-of: prom
    app.kubernetes.io/version: 88.3.0
    chart: kube-prometheus-stack-88.3.0
    heritage: Helm
    release: kube-prometheus-stack
  name: kube-prom-operator
  namespace: kube-prometheus-stack-system
spec:
  egress:
  - toEntities:
    - kube-apiserver
  endpointSelector:
    matchLabels:
      app: prom-operator
      app.kubernetes.io/component: prometheus-operator
      app.kubernetes.io/instance: kube-prometheus-stack
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: prom-prometheus-operator
      app.kubernetes.io/part-of: prom
      app.kubernetes.io/version: 88.3.0
      chart: kube-prometheus-stack-88.3.0
      heritage: Helm
      release: kube-prometheus-stack
  ingress:
  - toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
